--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 
         <div class="social-links d-none d-md-flex align-items-center">
 
-          <a href="https://www.instagram.com/dietance_" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.instagram.com/dietance.in" class="instagram"><i class="bi bi-instagram"></i></a>
           <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
           <a href="#" class="medium"><i class="bi bi-medium"></i></a>
 
