--- a/lifestyle-mgmt.html
+++ b/lifestyle-mgmt.html
@@ -228,7 +228,7 @@
                       <!-- Action Buttons -->
                       <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 w-full">
                           <!-- <a href="https://wa.me/917048974272/?text=Hi%20there%2C%20I%20am%20Interested%20in%20the%20Diet%20Package%20plan%20for%20Kids%20" class="flex-grow btn-contact bg-blue-600 text-white font-medium py-3 rounded-lg text-center transition-colors hover:bg-blue-700">Contact Us</a> -->
-                          <a href="kids-n-form-ind.html" class="flex-grow btn-contact-2 bg-gray-200 text-gray-800 font-medium py-3 rounded-lg text-center transition-colors hover:bg-gray-300">Proceed</a>
+                          <a href="lifestyle-mgmt-form-ind.html" class="flex-grow btn-contact-2 bg-gray-200 text-gray-800 font-medium py-3 rounded-lg text-center transition-colors hover:bg-gray-300">Proceed</a>
                       </div>
                   </div>
               </div>
@@ -289,7 +289,7 @@
                       <!-- Action Buttons -->
                       <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 w-full">
                           <!-- <a href="https://wa.me/917048974272/?text=Hi%20there%2C%20I%20am%20Interested%20in%20the%20Global%20Diet%20Package%20plan" class="flex-grow btn-contact bg-blue-600 text-white font-medium py-3 rounded-lg text-center transition-colors hover:bg-blue-700">Contact Us</a> -->
-                          <a href="kids-n-form-for.html" class="flex-grow btn-contact-2 bg-gray-200 text-gray-800 font-medium py-3 rounded-lg text-center transition-colors hover:bg-gray-300">Proceed</a>
+                          <a href="lifestyle-mgmt-form-www.html" class="flex-grow btn-contact-2 bg-gray-200 text-gray-800 font-medium py-3 rounded-lg text-center transition-colors hover:bg-gray-300">Proceed</a>
                       </div>
                   </div>
               </div>
