--- a/about.html
+++ b/about.html
@@ -220,9 +220,7 @@
               <a href="kids-n.html" class="stretched-link">
                 <h3>Vision</h3>
               </a>
-              <p>We empower individuals and communities, especially vulnerable populations, to achieve optimal health through nutrition and sustainable food systems.<br> 
-                <br>We aim to reduce malnutrition and promote food security globally by translating complex nutritional science into accessible, personalized advice.<br> 
-                <br>Our goal is to guide people toward healthy, lifelong eating habits and advance the field of dietetics through education, research, and advocacy.</p>
+              <p>To advance the field of dietetics and reduce malnutrition by providing accessible, personalized nutritional science.</p>
             </div>
           </div><div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative">
@@ -232,9 +230,7 @@
               <a href="women-n.html" class="stretched-link">
                 <h3>Mission</h3>
               </a>
-              <p>We translate the complex science of nutrition into practical, accessible, and personalized advice for everyone. <br>
-                <br>Our goal is to guide people in making informed dietary choices and adopting sustainable eating patterns for long-term health. <br>
-                <br>We also aim to advance the profession of nutrition and dietetics through our commitment to education, research, and advocacy.</p>
+              <p>To translate complex nutritional science into practical, sustainable advice for everyone.</p>
             </div>
           </div><div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">            
             <div class="service-item position-relative">
@@ -244,9 +240,7 @@
               <a href="mens-n.html" class="stretched-link">
                 <h3>Values</h3>
               </a>
-              <p>We are committed to evidence-based practice, using current scientific research to inform our guidance.<br>
-              <br>We treat everyone with compassion and respect, understanding diverse perspectives to provide empathetic care.<br>
-              <br>Our focus is on the community, and we are dedicated to improving health for all groups. We uphold integrity and ethics in everything we do, and we believe in lifelong learning to stay current and open to new ideas.</p>
+              <p>Commitment to compassion, integrity, and evidence-based practices, with a focus on lifelong learning.</p>
             </div>
           </div><div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
 
@@ -257,9 +251,7 @@
               <a href="sports-n.html" class="stretched-link">
                 <h3>Goals</h3>
               </a>
-              <p>Our Individual Health Outcomes goal is to empower clients with personalized nutrition plans to prevent disease and manage health conditions.<br> 
-                <br> We strive for Public Health Improvement by designing and implementing effective nutrition programs that positively impact communities locally and globally. <br> 
-                <br> Finally, we are committed to Policy and Advocacy, championing policies and programs that reduce health disparities, increase nutrition security, and support sustainable food systems.</p>            
+              <p>To empower clients with personalized plans, improve public health through effective nutrition programs, and advocate for policies that support nutrition security and sustainable food systems.</p>            
             </div>
 
       </div>
