--- a/kids-n.html
+++ b/kids-n.html
@@ -166,7 +166,9 @@
         <div class="container">
             <div class="row text-center mb-5">
                 <div class="col-lg-8 mx-auto">
-                    <h2 class="display-4 fw-bold">Our Plans for Your healthy future</h2>
+                    <h3 class="display-4 fw-bold">Plans for a healthy future
+
+</h3>
                     <p class="lead text-muted">Choose the plan that best fits your needs and Kick start a healthy life!</p>
                 </div>
             </div>
