--- a/index.html
+++ b/index.html
@@ -614,80 +614,52 @@ Wishing you continued success, happiness, and good health always.
         <h2>Gallery</h2>
         <!-- <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p> -->
       </div><!-- End Section Title -->
-
-      <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row g-0">
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/gallery/g-1.jpeg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/g-1.jpeg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div><!-- End Gallery Item -->
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/gallery/g-2.jpeg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/g-2.jpeg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div><!-- End Gallery Item -->
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/gallery/g-3.jpeg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/g-3.jpeg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div><!-- End Gallery Item -->
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/gallery/g-4.jpeg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/g-4.jpeg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div><!-- End Gallery Item -->
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/gallery/g-5.jpeg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/g-5.jpeg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div><!-- End Gallery Item -->
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/gallery/g-6.jpeg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/g-6.jpeg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div><!-- End Gallery Item -->
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/gallery/g-7.jpeg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/g-7.jpeg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div><!-- End Gallery Item -->
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/gallery/g-8.jpeg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/gallery/g-8.jpeg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div><!-- End Gallery Item -->
-
+  <div class="container my-5">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
+      <div class="col">
+        <div class="gallery-item shadow-sm">
+          <img src="assets/img/gallery/g-1.jpeg" class="img-fluid" alt="Gallery Image 1">
         </div>
-
       </div>
+      <div class="col">
+        <div class="gallery-item shadow-sm">
+          <img src="assets/img/gallery/g-2.jpeg" class="img-fluid" alt="Gallery Image 2">
+        </div>
+      </div>
+      <div class="col">
+        <div class="gallery-item shadow-sm">
+          <img src="assets/img/gallery/g-3.jpeg" class="img-fluid" alt="Gallery Image 3">
+        </div>
+      </div>
+      <div class="col">
+        <div class="gallery-item shadow-sm">
+          <img src="assets/img/gallery/g-4.jpeg" class="img-fluid" alt="Gallery Image 4">
+        </div>
+      </div>
+      <div class="col">
+        <div class="gallery-item shadow-sm">
+          <img src="assets/img/gallery/g-5.jpeg" class="img-fluid" alt="Gallery Image 5">
+        </div>
+      </div>
+      <div class="col">
+        <div class="gallery-item shadow-sm">
+          <img src="assets/img/gallery/g-6.jpeg" class="img-fluid" alt="Gallery Image 6">
+        </div>
+      </div>
+      <div class="col">
+        <div class="gallery-item shadow-sm">
+          <img src="assets/img/gallery/g-7.jpeg" class="img-fluid" alt="Gallery Image 7">
+        </div>
+      </div>
+      <div class="col">
+        <div class="gallery-item shadow-sm">
+          <img src="assets/img/gallery/g-8.jpeg" class="img-fluid" alt="Gallery Image 8">
+        </div>
+      </div>
+    </div>
+  </div>
 
-    </section><!-- /Gallery Section -->
+      <!-- /Gallery Section -->
 
   </main>
 
