--- a/temp.html
+++ b/temp.html
@@ -1,28 +1,75 @@
-    <!-- Hero Section -->
-    <section id="hero" class="hero section light-background">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Image Gallery</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .gallery-item {
+      overflow: hidden;
+      border-radius: 8px;
+      /* Adjust height to make images even */
+      height: 250px; /* You can adjust this value */
+    }
+    .gallery-item img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transition: transform 0.3s ease;
+    }
+    .gallery-item:hover img {
+      transform: scale(1.05);
+    }
+  </style>
+</head>
+<body>
 
-      <img src="assets/img/hero-bg/lifestyle-mgmt.jpg" alt="" data-aos="fade-in">
-
-      <div class="container position-relative">
-
-        <div class="content row gy-4">
-          <div class="col-lg-4 d-flex align-items-stretch">
-            <div class="why-box" data-aos="zoom-out" data-aos-delay="200">
-              <h3>Our Holistic Approach</h3>
-              <p>
-                For those with specific dietary requirements or health conditions. Our experts provide personalized meal plans and guidance for managing diabetes, food allergies, digestive issues, and other unique health challenges.
-              </p>
-              <!-- <div class="text-center">
-                <a href="#about" class="more-btn"><span>Learn More</span> <i class="bi bi-chevron-right"></i></a>
-              </div> -->
-            </div>
-          </div><!-- End Why Box -->
-
-              </div>
-            </div>
-          </div>
-        </div><!-- End  Content-->
-
+  <div class="container my-5">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
+      <div class="col">
+        <div class="gallery-item shadow-sm">
+          <img src="assets/img/gallery/g-1.jpeg" class="img-fluid" alt="Gallery Image 1">
+        </div>
       </div>
+      <div class="col">
+        <div class="gallery-item shadow-sm">
+          <img src="assets/img/gallery/g-2.jpeg" class="img-fluid" alt="Gallery Image 2">
+        </div>
+      </div>
+      <div class="col">
+        <div class="gallery-item shadow-sm">
+          <img src="assets/img/gallery/g-3.jpeg" class="img-fluid" alt="Gallery Image 3">
+        </div>
+      </div>
+      <div class="col">
+        <div class="gallery-item shadow-sm">
+          <img src="assets/img/gallery/g-4.jpeg" class="img-fluid" alt="Gallery Image 4">
+        </div>
+      </div>
+      <div class="col">
+        <div class="gallery-item shadow-sm">
+          <img src="assets/img/gallery/g-5.jpeg" class="img-fluid" alt="Gallery Image 5">
+        </div>
+      </div>
+      <div class="col">
+        <div class="gallery-item shadow-sm">
+          <img src="assets/img/gallery/g-6.jpeg" class="img-fluid" alt="Gallery Image 6">
+        </div>
+      </div>
+      <div class="col">
+        <div class="gallery-item shadow-sm">
+          <img src="assets/img/gallery/g-7.jpeg" class="img-fluid" alt="Gallery Image 7">
+        </div>
+      </div>
+      <div class="col">
+        <div class="gallery-item shadow-sm">
+          <img src="assets/img/gallery/g-8.jpeg" class="img-fluid" alt="Gallery Image 8">
+        </div>
+      </div>
+    </div>
+  </div>
 
-    </section><!-- /Hero Section -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
