Gallery Size Reduction
2.2 MB to 489 KB

--- a/index.html
+++ b/index.html
@@ -618,42 +618,42 @@ Wishing you continued success, happiness, and good health always.
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
       <div class="col">
         <div class="gallery-item shadow-sm">
-          <img src="assets/img/gallery/g-1.jpeg" class="img-fluid" alt="Gallery Image 1">
+          <img src="assets/img/gallery/g-1.webp" class="img-fluid" alt="Gallery Image 1">
         </div>
       </div>
       <div class="col">
         <div class="gallery-item shadow-sm">
-          <img src="assets/img/gallery/g-2.jpeg" class="img-fluid" alt="Gallery Image 2">
+          <img src="assets/img/gallery/g-2.webp" class="img-fluid" alt="Gallery Image 2">
         </div>
       </div>
       <div class="col">
         <div class="gallery-item shadow-sm">
-          <img src="assets/img/gallery/g-3.jpeg" class="img-fluid" alt="Gallery Image 3">
+          <img src="assets/img/gallery/g-3.webp" class="img-fluid" alt="Gallery Image 3">
         </div>
       </div>
       <div class="col">
         <div class="gallery-item shadow-sm">
-          <img src="assets/img/gallery/g-4.jpeg" class="img-fluid" alt="Gallery Image 4">
+          <img src="assets/img/gallery/g-4.webp" class="img-fluid" alt="Gallery Image 4">
         </div>
       </div>
       <div class="col">
         <div class="gallery-item shadow-sm">
-          <img src="assets/img/gallery/g-5.jpeg" class="img-fluid" alt="Gallery Image 5">
+          <img src="assets/img/gallery/g-5.webp" class="img-fluid" alt="Gallery Image 5">
         </div>
       </div>
       <div class="col">
         <div class="gallery-item shadow-sm">
-          <img src="assets/img/gallery/g-6.jpeg" class="img-fluid" alt="Gallery Image 6">
+          <img src="assets/img/gallery/g-6.webp" class="img-fluid" alt="Gallery Image 6">
         </div>
       </div>
       <div class="col">
         <div class="gallery-item shadow-sm">
-          <img src="assets/img/gallery/g-7.jpeg" class="img-fluid" alt="Gallery Image 7">
+          <img src="assets/img/gallery/g-7.webp" class="img-fluid" alt="Gallery Image 7">
         </div>
       </div>
       <div class="col">
         <div class="gallery-item shadow-sm">
-          <img src="assets/img/gallery/g-8.jpeg" class="img-fluid" alt="Gallery Image 8">
+          <img src="assets/img/gallery/g-8.webp" class="img-fluid" alt="Gallery Image 8">
         </div>
       </div>
     </div>
