--- a/lifestyle-mgmt.html
+++ b/lifestyle-mgmt.html
@@ -126,7 +126,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section light-background">
 
-      <img src="assets/img/hero-bg/lifestyle-mgmt.jpg" alt="" data-aos="fade-in">
+      <img src="assets/img/hero-bg/lifestyle-mgmt.webp" alt="" data-aos="fade-in">
 
       <div class="container position-relative">
 
