--- a/mens-n.html
+++ b/mens-n.html
@@ -126,7 +126,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section light-background">
 
-      <img src="assets/img/hero-bg/men-n.jpg" alt="" data-aos="fade-in">
+      <img src="assets/img/hero-bg/men-n.webp" alt="" data-aos="fade-in">
 
       <div class="container position-relative">
 
