--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:info@dietance.com">info@dietance.com</a></i>
 
           <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 80766 42570</span></i>
-          <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 70489 74272</span></i>
+
           
         </div>
 
@@ -54,9 +54,9 @@
 
         <div class="social-links d-none d-md-flex align-items-center">
 
-          <a href="https://www.instagram.com/dietance.in" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="medium"><i class="bi bi-medium"></i></a>
+          <a href="https://www.instagram.com/dietance.india" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.facebook.com/dietance/" class="facebook"><i class="bi bi-facebook"></i></a>
+          <a href="https://medium.com/@dietance" class="medium"><i class="bi bi-medium"></i></a>
 
         </div>
       </div>
@@ -82,8 +82,8 @@
             <li class="dropdown"><a href="index.html#services"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="kids-n.html">Kids Nutrition</a></li>
-                <li><a href="mens-n.html">Mens Nutrition</a></li>
-                <li><a href="womens-n.html">Womens Nutrition</a></li>
+                <li><a href="men-n.html">Men Nutrition</a></li>
+                <li><a href="men-n.html">Women Nutrition</a></li>
                 <li><a href="Elderly-n.html">Elderly Nutrition</a></li>                
                 <li><a href="lifestyle-mgmt.html">Lifestyle Management</a></li>
               </ul>
@@ -185,8 +185,8 @@
               <div class="icon">
                 <i class="bi bi-person-gear"></i>
               </div>
-              <a href="mens-n.html" class="stretched-link">
-                <h3>Mens Nutrition</h3>
+              <a href="men-n.html" class="stretched-link">
+                <h3>Men Nutrition</h3>
               </a>
               <p>Tailored nutrition plans designed to meet the unique needs of men. Whether you're focused on building muscle, managing weight, or improving overall health, our experts will help you reach your goals.</p>
             </div>
@@ -197,8 +197,8 @@
               <div class="icon">
                 <i class="bi bi-gem"></i>
               </div>
-              <a href="womens-n.html" class="stretched-link">
-                <h3>Womens Nutrition</h3>
+              <a href="women-n.html" class="stretched-link">
+                <h3>Women Nutrition</h3>
               </a>
               <p>Specialized nutrition guidance for every stage of a woman's life. We offer personalised support for fertility, pregnancy, menopause, and overall hormonal balance to help you feel your best.</p>
             </div>
@@ -296,159 +296,6 @@
 <div class="swiper-slide">
 <div class="testimonial-item">
 <div class="d-flex">
-<!-- <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img flex-shrink-0" alt=""> -->
-<div>
-<h3>Aarti</h3>
-<!-- <h4>Parent</h4> -->
-<!-- <div class="stars">
-<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-</div> -->
-</div>
-</div>
-<p>
-<i class="bi bi-quote quote-icon-left"></i>
-<span>I was so worried about my son's picky eating. The dietitian made the process so easy and fun for him. He's now excited to try new foods and his energy levels have improved so much. This has been a game-changer for our family!</span>
-<i class="bi bi-quote quote-icon-right"></i>
-</p>
-</div>
-</div>    
-
-<div class="swiper-slide">
-<div class="testimonial-item">
-<div class="d-flex">
-<!-- <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img flex-shrink-0" alt=""> -->
-<div>
-<h3>Suresh Mattas</h3>
-<!-- <h4>Parent</h4> -->
-<!-- <div class="stars">
-<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-</div> -->
-</div>
-</div>
-<p>
-<i class="bi bi-quote quote-icon-left"></i>
-<span>I would like to mention that I joined about 45 days back and my BGL fasting was 240 with weight as 97 kg and am really grateful to my dietician Faaiza Bano for guiding me regularly during the time due to which I was able to bring down BGL fasting to 120 and weight has reduced to
-90.5.... Still long way to go however motivated to achieve the same
-</span>
-<i class="bi bi-quote quote-icon-right"></i>
-</p>
-</div>
-</div> 
-
-<div class="swiper-slide">
-<div class="testimonial-item">
-<div class="d-flex">
-<!-- <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img flex-shrink-0" alt=""> -->
-<div>
-<h3>Dilip Jadhav</h3>
-<!-- <h4>Parent</h4> -->
-<!-- <div class="stars">
-<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-</div> -->
-</div>
-</div>
-<p>
-<i class="bi bi-quote quote-icon-left"></i>
-<span>i joined on 13th August 2024 and it's almost 4 months to complete. Today I did my HbAIC test and i am very happy to announce that in 4 months time my HbAlc dropped from 10.8 to 7.1.
-Really it's a great achievement for me. Thanks to my Health coach Faaiza Bano for consistently guiding me. Also thanks to the members who always inspiring us by sharing their success stories.
-</span>
-<i class="bi bi-quote quote-icon-right"></i>
-</p>
-</div>
-</div> 
-
-<div class="swiper-slide">
-<div class="testimonial-item">
-<div class="d-flex">
-<!-- <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img flex-shrink-0" alt=""> -->
-<div>
-<h3>Binay kumar verma</h3>
-<!-- <h4>Parent</h4> -->
-<!-- <div class="stars">
-<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-</div> -->
-</div>
-</div>
-<p>
-<i class="bi bi-quote quote-icon-left"></i>
-<span>Hi me Binay Kumar Verma joined on 29th July 23. Diabetic since 22 years. The time I have started my journey here my Fasting BGL was 153mg/dl and PP: 202mg/dl and HBIAC: 9.0 and Weight: 73. kg. Today the figure has changed Fasting BGL: 99mg/dl, PP BGL range : 118-131 mg/ dl and HBAIC: 7.4. Weight reduce to 69 kg. Result in just 77 days. It all happened with sincere and honest support from my food coach Miss Faiza Bano Thanks from heart to my coach and looking similar support in future too. In fact entire team is great. KUDOS to the team.
-</span>
-<i class="bi bi-quote quote-icon-right"></i>
-</p>
-</div>
-</div>
-
-<div class="swiper-slide">
-<div class="testimonial-item">
-<div class="d-flex">
-<!-- <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img flex-shrink-0" alt=""> -->
-<div>
-<h3>Anil Kumar Jha</h3>
-<!-- <h4>Parent</h4> -->
-<!-- <div class="stars">
-<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-</div> -->
-</div>
-</div>
-<p>
-<i class="bi bi-quote quote-icon-left"></i>
-<span>Hi Everyone, I have joined the programme two months back with HBIAc 8.4, today my report came with 5 7, Thanks to my coach Ms Faiza Bano to get this result which fulfilled me with full of motivation. My medicine has deducted to half, even now I am taking only 6 unit of insulin. Probably next 15 days I will be able to discontinue Insulin completely. I would like to thank entire team and their contribution to diabetic free Bharat.
-</span>
-<i class="bi bi-quote quote-icon-right"></i>
-</p>
-</div>
-</div>
-
-<div class="swiper-slide">
-<div class="testimonial-item">
-<div class="d-flex">
-<!-- <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img flex-shrink-0" alt=""> -->
-<div>
-<h3>Ashish Kumar</h3>
-<!-- <h4>Parent</h4> -->
-<!-- <div class="stars">
-<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-</div> -->
-</div>
-</div>
-<p>
-<i class="bi bi-quote quote-icon-left"></i>
-<span>I joined on 16 May 23, initially my HBAIC was 9.4 and today it was tested and found 6.0. My very special thanks to my health coach. She is excellent coach, very clear targets set by her for me and supported to achieve them, she helped to change my lifestyle for my benefit, she is punctual, clear in instructions and always available for guidance. I am enjoying the journey and feeling energetic.
-I may not able to express my gratitude in words but I am thankful to coach and whole team.
-Reversal journey continues....
-</span>
-<i class="bi bi-quote quote-icon-right"></i>
-</p>
-</div>
-</div>
-
-
-<div class="swiper-slide">
-<div class="testimonial-item">
-<div class="d-flex">
-<!-- <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img flex-shrink-0" alt=""> -->
-<div>
-<h3>Fawaz Rakhio</h3>
-<!-- <h4>Parent</h4> -->
-<!-- <div class="stars">
-<i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-</div> -->
-</div>
-</div>
-<p>
-<i class="bi bi-quote quote-icon-left"></i>
-<span>Dear Faaiza, For the past two years, you’ve been more than just a health coach—you’ve been a constant source of motivation, support, and encouragement in my journey toward better health.
-Your guidance, patience, and dedication have made such a positive difference in my life, and I’m deeply grateful for all the time and effort you’ve invested in me.
-Wishing you continued success, happiness, and good health always. 
-</span>
-<i class="bi bi-quote quote-icon-right"></i>
-</p>
-</div>
-</div>
-
-<!-- <div class="swiper-slide">
-<div class="testimonial-item">
-<div class="d-flex">
 <div>
 <h3>NAME_SURNAME</h3>
 </div>
@@ -460,7 +307,7 @@ Wishing you continued success, happiness, and good health always.
 <i class="bi bi-quote quote-icon-right"></i>
 </p>
 </div>
-</div> -->
+</div>
 
               </div>
               <div class="swiper-pagination"></div>
@@ -497,23 +344,6 @@ Wishing you continued success, happiness, and good health always.
                 M.Sc. Dietetics and Food & Nutrition, B.Sc., I.Y.C.F & C.D.E<br><br>
                 As a cofounder of Dietance and a clinical dietitian, she's passionate about helping you hit your unique health goals. She's all about ditching the quick fixes and using personalized, evidence-based nutrition to build lasting habits that empower you to feel your best.
                 </p>
-                <div class="social">
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <!-- <a href=""> <i class="bi bi-linkedin"></i> </a> -->
-                </div>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="team-member d-flex align-items-start">
-              <!-- <div class="pic"><img src="assets/img/doctors/doctors-2.jpg" class="img-fluid" alt=""></div> -->
-              <div class="member-info">
-                <h4>Faaiza Bano</h4>
-                <span>Dietitian</span>
-                <p>M.Sc. Dietetics and Food & Nutrition, B.Sc. & I.Y.C.F<br><br>
-                Co-Founder of Dietance, With a postgraduate degree in Foods & Nutrition, IYCF certification, She's keen to heal the body with food. She is a knowledgeable Health Coach|Dietitian, experienced in nutritional planning and patient counseling. She has developed personalised meal plans that improved client outcomes and promoted healthier lifestyles, and She possess expertise in dietary assessment and effective communication.</p>
                 <div class="social">
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -636,28 +466,6 @@ Wishing you continued success, happiness, and good health always.
           <img src="assets/img/gallery/g-4.webp" class="img-fluid" alt="Gallery Image 4">
         </div>
       </div>
-      <div class="col">
-        <div class="gallery-item shadow-sm">
-          <img src="assets/img/gallery/g-5.webp" class="img-fluid" alt="Gallery Image 5">
-        </div>
-      </div>
-      <div class="col">
-        <div class="gallery-item shadow-sm">
-          <img src="assets/img/gallery/g-6.webp" class="img-fluid" alt="Gallery Image 6">
-        </div>
-      </div>
-      <div class="col">
-        <div class="gallery-item shadow-sm">
-          <img src="assets/img/gallery/g-7.webp" class="img-fluid" alt="Gallery Image 7">
-        </div>
-      </div>
-      <div class="col">
-        <div class="gallery-item shadow-sm">
-          <img src="assets/img/gallery/g-8.webp" class="img-fluid" alt="Gallery Image 8">
-        </div>
-      </div>
-    </div>
-  </div>
 
       <!-- /Gallery Section -->
 
@@ -680,7 +488,7 @@ Wishing you continued success, happiness, and good health always.
       <div class="footer-contact">
         <p>Available 09 AM to 09 PM IST</p>
         <p><strong>Phone 01:</strong> <span>+91 80766 42570</span></p>
-        <p><strong>Phone 02:</strong> <span>+91 70489 74272</span></p>
+
         <p><strong>Email:</strong> <span>info@dietance.com</span></p>
       </div>
       <div class="social-links d-flex mt-4">
@@ -707,8 +515,8 @@ Wishing you continued success, happiness, and good health always.
       <h4>Our Services</h4>
       <ul>
             <li><a href="kids-n.html">Kids Nutrition</a></li>
-            <li><a href="mens-n.html">Mens Nutrition</a></li>
-            <li><a href="womens-n.html">Womens Nutrition</a></li>
+            <li><a href="men-n.html">Men Nutrition</a></li>
+            <li><a href="men-n.html">Women Nutrition</a></li>
             <li><a href="Elderly-n.html">Elderly Nutrition</a></li>                            
             <li><a href="lifestyle-mgmt.html">Lifestyle Management</a></li>
       </ul>
