--- a/about.html
+++ b/about.html
@@ -47,7 +47,6 @@
           <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:info@dietance.com">info@dietance.com</a></i>
 
           <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 80766 42570</span></i>
-          <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 70489 74272</span></i>
           
         </div>
 
@@ -55,9 +54,9 @@
 
         <div class="social-links d-none d-md-flex align-items-center">
 
-          <a href="https://www.instagram.com/dietance.in" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="medium"><i class="bi bi-medium"></i></a>
+          <a href="https://www.instagram.com/dietance.india" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.facebook.com/dietance/" class="facebook"><i class="bi bi-facebook"></i></a>
+          <a href="https://medium.com/@dietance" class="medium"><i class="bi bi-medium"></i></a>
 
         </div>
       </div>
@@ -83,8 +82,8 @@
             <li class="dropdown"><a href="index.html#services"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
                 <li><a href="kids-n.html">Kids Nutrition</a></li>
-                <li><a href="mens-n.html">Mens Nutrition</a></li>
-                <li><a href="womens-n.html">Womens Nutrition</a></li>
+                <li><a href="men-n.html">Men Nutrition</a></li>
+                <li><a href="men-n.html">Women Nutrition</a></li>
                 <li><a href="Elderly-n.html">Elderly Nutrition</a></li>                
                 <li><a href="lifestyle-mgmt.html">Lifestyle Management</a></li>
               </ul>
@@ -237,7 +236,7 @@
               <div class="icon">
                 <i class="bi bi-gem"></i>
               </div>
-              <a href="mens-n.html" class="stretched-link">
+              <a href="men-n.html" class="stretched-link">
                 <h3>Values</h3>
               </a>
               <p>Commitment to compassion, integrity, and evidence-based practices, with a focus on lifelong learning.</p>
@@ -276,8 +275,7 @@
       <h4>Contact Us</h4>
       <div class="footer-contact">
         <p>Available 09 AM to 09 PM IST</p>
-        <p><strong>Phone 01:</strong> <span>+91 80766 42570</span></p>
-        <p><strong>Phone 02:</strong> <span>+91 70489 74272</span></p>
+        <p><strong>Phone</strong> <span>+91 80766 42570</span></p>
         <p><strong>Email:</strong> <span>info@dietance.com</span></p>
       </div>
       <div class="social-links d-flex mt-4">
@@ -304,8 +302,8 @@
       <h4>Our Services</h4>
       <ul>
             <li><a href="kids-n.html">Kids Nutrition</a></li>
-            <li><a href="mens-n.html">Mens Nutrition</a></li>
-            <li><a href="womens-n.html">Womens Nutrition</a></li>
+            <li><a href="men-n.html">Men Nutrition</a></li>
+            <li><a href="men-n.html">Women Nutrition</a></li>
             <li><a href="Elderly-n.html">Elderly Nutrition</a></li>                            
             <li><a href="lifestyle-mgmt.html">Lifestyle Management</a></li>
       </ul>
