Updated Prices and added Forex Warning

--- a/kids-n-form-ind.html
+++ b/kids-n-form-ind.html
@@ -49,9 +49,9 @@
                     <label for="plan" class="form-label">Select a Plan</label>
                     <select class="form-select" id="plan" name="plan" required>
                         <option selected disabled value="">Choose...</option>
-                        <option value="01 Month INR 3,999">01 Month INR 3,999</option>
-                        <option value="03 Months INR 9,999">03 Months INR 9,999</option>
-                        <option value="06 Months INR 14,999">06 Months INR 14,999</option>
+                        <option value="Kids 01 Month">01 Month INR 3,799</option>
+                        <option value="Kids 03 Month">03 Months INR 8,799</option>
+                        <option value="Kids 06 Month">06 Months INR 12,799</option>
                     </select>
                 </div>
 
