--- a/kids-n-form-www.html
+++ b/kids-n-form-www.html
@@ -50,9 +50,9 @@
                     <label for="plan" class="form-label">Select a Plan</label>
                     <select class="form-select" id="plan" name="plan" required>
                         <option selected disabled value="">Choose...</option>
-                        <option value="01 Month INR 5,999">01 Month INR 5,999</option>
-                        <option value="03 Months INR 11,999">03 Months INR 11,999</option>
-                        <option value="06 Months INR 18,999">06 Months INR 18,999</option>
+                        <option value="Kids INT 01 Month">01 Month INR 4,799</option>
+                        <option value="Kids INT 03 Month">03 Months INR 9,799</option>
+                        <option value="Kids INT 06 Month">06 Months INR 13,799</option>
                     </select>
                 </div>
 
