--- a/men-n-form-ind.html
+++ b/men-n-form-ind.html
@@ -50,9 +50,9 @@
                     <label for="plan" class="form-label">Select a Plan</label>
                     <select class="form-select" id="plan" name="plan" required>
                         <option selected disabled value="">Choose...</option>
-                        <option value="01 Month INR 3,999">01 Month INR 3,999</option>
-                        <option value="03 Months INR 9,999">03 Months INR 9,999</option>
-                        <option value="06 Months INR 14,999">06 Months INR 14,999</option>
+                        <option value="Men 01 Month">01 Month INR 4,599</option>
+                        <option value="Men 03 Months">03 Months INR 9,599</option>
+                        <option value="Men 06 Months">06 Months INR 13,599</option>
                     </select>
                 </div>
 
