--- a/women-n-form-www.html
+++ b/women-n-form-www.html
@@ -50,11 +50,13 @@
                     <label for="plan" class="form-label">Select a Plan</label>
                     <select class="form-select" id="plan" name="plan" required>
                         <option selected disabled value="">Choose...</option>
-                        <option value="01 Month INR 3,999">01 Month INR 3,999</option>
-                        <option value="03 Months INR 9,999">03 Months INR 9,999</option>
-                        <option value="06 Months INR 14,999">06 Months INR 14,999</option>
+                        <option value="Women INT 01 Month">01 Month INR 5,599</option>
+                        <option value="Women INT 03 Months">03 Months INR 10,599</option>
+                        <option value="Women INT 06 Months">06 Months INR 14,599</option>
                     </select>
                 </div>
+
+                <P>Please be aware that your bank or financial institution may charge a forex fee for international transactions, which could be deducted from the payment amount. We have no control over these fees.</P>                
 
                 <div class="mb-3">
                     <label for="message" class="form-label">Additional Message (Optional)</label>
