--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <ul>
                 <li><a href="kids-n.html">Kids Nutrition</a></li>
                 <li><a href="men-n.html">Men Nutrition</a></li>
-                <li><a href="men-n.html">Women Nutrition</a></li>
+                <li><a href="women-n.html">Women Nutrition</a></li>
                 <li><a href="Elderly-n.html">Elderly Nutrition</a></li>                
                 <li><a href="lifestyle-mgmt.html">Lifestyle Management</a></li>
               </ul>
@@ -516,7 +516,7 @@
       <ul>
             <li><a href="kids-n.html">Kids Nutrition</a></li>
             <li><a href="men-n.html">Men Nutrition</a></li>
-            <li><a href="men-n.html">Women Nutrition</a></li>
+            <li><a href="women-n.html">Women Nutrition</a></li>
             <li><a href="Elderly-n.html">Elderly Nutrition</a></li>                            
             <li><a href="lifestyle-mgmt.html">Lifestyle Management</a></li>
       </ul>
