--- a/lifestyle-mgmt.html
+++ b/lifestyle-mgmt.html
@@ -87,7 +87,7 @@
               <ul>
                 <li><a href="kids-n.html">Kids Nutrition</a></li>
                 <li><a href="men-n.html">Men Nutrition</a></li>
-                <li><a href="men-n.html">Women Nutrition</a></li>
+                <li><a href="women-n.html">Women Nutrition</a></li>
                 <li><a href="Elderly-n.html">Elderly Nutrition</a></li>                
                 <li><a href="lifestyle-mgmt.html">Lifestyle Management</a></li>
               </ul>
@@ -346,7 +346,7 @@
       <ul>
             <li><a href="kids-n.html">Kids Nutrition</a></li>
             <li><a href="men-n.html">Men Nutrition</a></li>
-            <li><a href="men-n.html">Women Nutrition</a></li>
+            <li><a href="women-n.html">Women Nutrition</a></li>
             <li><a href="Elderly-n.html">Elderly Nutrition</a></li>                            
             <li><a href="lifestyle-mgmt.html">Lifestyle Management</a></li>
       </ul>
