--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
               <div class="icon">
                 <i class="bi-heart-pulse-fill"></i>
               </div>
-              <a href="Elderly-n.html" class="stretched-link">
+              <a href="elderly-n.html" class="stretched-link">
                 <h3>Elderly Nutrition</h3>
               </a>
               <p>Comprehensive nutritional support for a healthy and active life as you age. We focus on addressing age-related health concerns, improving energy levels, and ensuring you get the essential nutrients you need to stay strong.</p>            
@@ -517,7 +517,7 @@
             <li><a href="kids-n.html">Kids Nutrition</a></li>
             <li><a href="men-n.html">Men Nutrition</a></li>
             <li><a href="women-n.html">Women Nutrition</a></li>
-            <li><a href="Elderly-n.html">Elderly Nutrition</a></li>                            
+            <li><a href="elderly-n.html">Elderly Nutrition</a></li>                            
             <li><a href="lifestyle-mgmt.html">Lifestyle Management</a></li>
       </ul>
     </div>
