--- a/women-n.html
+++ b/women-n.html
@@ -88,7 +88,7 @@
                 <li><a href="kids-n.html">Kids Nutrition</a></li>
                 <li><a href="men-n.html">Men Nutrition</a></li>
                 <li><a href="women-n.html">Women Nutrition</a></li>
-                <li><a href="Elderly-n.html">Elderly Nutrition</a></li>                
+                <li><a href="elderly-n.html">Elderly Nutrition</a></li>                
                 <li><a href="lifestyle-mgmt.html">Lifestyle Management</a></li>
               </ul>
             </li>
@@ -347,7 +347,7 @@
             <li><a href="kids-n.html">Kids Nutrition</a></li>
             <li><a href="men-n.html">Men Nutrition</a></li>
             <li><a href="women-n.html">Women Nutrition</a></li>
-            <li><a href="Elderly-n.html">Elderly Nutrition</a></li>                            
+            <li><a href="elderly-n.html">Elderly Nutrition</a></li>                            
             <li><a href="lifestyle-mgmt.html">Lifestyle Management</a></li>
       </ul>
     </div>
